assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:wght@200;300;400;500&display=swap');

/*-----fonts-----*/

body{
    font-family: montserrat, sans-serif;
    font-weight: 400;
}

h1, h2, h3, h4, h5, h6 {
    font-family: abel, sans-serif;
}

.btn, .menu-items{
    font-weight: 500;
}

/*-----colors-----*/
header, footer, .services-text-div{
    background-color: rgba(240,240,240,0.3);
    
}

body, a{
    color: #626B73;
}

a:hover{
    color:#F2B705;
}

h1{
    color: #BF7E04;
}

h2{
    color: #fff;
}

h2{
    background-color:#BF7E04;
}

.services-text-div{
    color: #fff;
}

.services-text-div{
    background-color:rgba(242,183,5,0.5);
}

.contact-container .col-4{
    background-color: #626B73;
    color: #fff;
}

.contact-container .col-8{
    background-color: #F2B705;
    border-color: #F2B705;
    color: #fff;
}

/*-----images border-radius-----*/

.about-image-div, .gallery-image-row img, .services-image-div, h2, .services-text-div{
    border-radius: 3px;
}

/*-----general-----*/

h1, h2{
    margin-bottom: 20px;
    margin-top: 20px;
}

/*-----header-----*/

.logo{
    margin-top: -30px;
    margin-bottom: -30px;
    margin-left: 10%;
}

nav a{
    text-decoration: none;
    margin-right: 10%;
}

/*-----hero image-----*/

.hero-section{
    height: 650px;
    margin-bottom: 10px;
    overflow: hidden;
    margin-top: -140px;
}

.hero{
    position: relative;
    bottom: 450px;
    z-index: -1;
    padding: 0;
}

.hero img {
    min-width: 100%;
}

/*-----index.html-----*/

.who-are-we{
    margin: auto;
    margin-bottom: 30px;
}

.who-are-we a{
    text-decoration: none;
}

.about-image-div{
    overflow: hidden;
    height: 370px;
}

.about-image-div img{
    position: relative;
    right: 300px;
}


/*-----gallery.html-----*/

.gallery-image-row img{
    max-width: 100%;
    max-height: 100%;
}

.gallery-image-row .col-lg-4{
    max-height: 400px;
    overflow: hidden;
}

.gallery-tractor{
    position: relative;
    bottom: 140px;
}

/*-----services.html-----*/

.services-image-row{
    height:288px;
}

.services-image-row .col-4{
    height:100%;
    padding:12px;
}

.services-image-div img{
    width: auto;
    height: auto;
    z-index: -1;
}

.services-image-div{
    height: 100%;
    overflow: hidden;
}

.services-text-div{
    position: relative;
    margin-top: -144px;
    height: 144px;
}

/*-----contact.html-----*/

.contact-details div, .contact-details h2{
    margin-bottom: 10px;
}

.contact-details h2{
    margin-top: auto;
}

.form-row input, textarea{
  width: 85%;  
}

.contact-container, .contact-container .col-4, .contact-container .col-8{
    padding: 15px;
}

.form-row .col-6, .form-row .col-12{
    padding-bottom: 15px;
}

input[type=submit]{
    width: auto;
}

.google-maps{
    margin-top: 15px;
    padding: 0;
}

.google-maps iframe{
    width: 100%;
    height: 210px;
    border: none;
}    

/*-----footer-----*/

.footer-row{
    height: 140px;
    text-align: center;
    margin-bottom: 0;
    margin-top: 30px;
}

.social-media a{
    text-decoration: none;
}

